--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </head>
 <body class="bg-slate-50 text-slate-900 font-sans">
     <div id="root"></div>
-<script type="module" src="/index.tsx"></script>
+<script type="module" src="/src/main.tsx"></script>
+
 </body>
 </html>
